applicationset/kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: okm2-backend
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: okm2-backend
        image: devopsjourney1/mywebapp:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "16Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
            
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: okm2-frontend
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: okm2-frontend
        image: huynhnhatduy108/react-docker:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "32Mi"
            cpu: "75m"
          limits:
            memory: "256Mi"
            cpu: "150m"
