applicationset/kustomize/base/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: okm2-backend-svc
spec:
  selector:
    app: okm2-backend
  ports:
  - port: 80
    targetPort: 80


---
apiVersion: v1
kind: Service
metadata:
  name: okm2-frontend-svc
spec:
  selector:
    app: okm2-frontend
  ports:
  - port: 80
    targetPort: 80
